--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser.js"></script>
         <script  type="text/babel">
-        var Notes = React.createClass({
+    var Notes = React.createClass({
     render:function(){
         return(
         <h1>Notes</h1>
@@ -15,16 +15,51 @@
     }
 
 })
+const NoteEditor = React.createClass({
+    getInitialState() {
+        return {
+            title:'',
+            text:'',
+            color:'#FFFFFF'
+        }
+    },
+    handleTextChange(event){
+        this.setState({text:event.target.value});
+
+    },
+    handleTitleChange(event) {
+        this.setState({event.target.value});
+    },
+    handleNoteAdd() {
+        const newNote ={
+            title:this.state.title,
+            text:this.state.text,
+            color:this.state.color
+        }
+        this.props.onNoteAdd(newNote) {
+            this.setState({text:'',title:'',color:'#FFFFFF'})
+        }
+    }
+    render(){
+        return(
+            <h2>NoteEditor</h2>
+        )
+    }
+})
 
 ReactDOM.render(
-    <h1>Notes</h1>,
+    <h1>NotesApp</h1>,
+    <h2> NoteEditor</h2>,
     document.getElementById('mount-point')
 )
+
+
 </script>
     <link rel="stylesheet" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
     <div id='mount-point'></div>
+  
 </body>
 </html>
